--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="styles/styles.css">
-	<link rel="stylesheet" type="text/css" href="https://fonts.gstatic.com/s/roboto/v15/ty9dfvLAziwdqQ2dHoyjphTbgVql8nDJpwnrE27mub0.woff2">
+	<link rel="stylesheet" type="text/css" href="styles/main.css">
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:100,700">
 	<title>My Portfolio</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
 			</div>
 		</div>
 	</div>
-	<div id="gallery" class="container-fluid hero">
+	<div class="container-fluid hero gallery">
 		<h2>Gallery</h2>
 		<div class="container">
 			<div class="row">
@@ -71,9 +71,9 @@
 		<p>I'm available for freelance--from events like weddings to documenting your next adventure, let's chat!</p>
 		<a href="mailto:mail@me.com"><button type="button" class="cta">Contact</button></a>
 		<div id="social">
-			<a href="http://www.twitter.com"><img src="img/icons/twitter.svg"></a>
-			<a href="http://www.instagram.com"><img src="img/icons/instagram.svg"></a>
-			<a href="http://www.medium.com"><img src="img/icons/medium.svg"></a>
+			<div class="col-md-4"><a href="http://www.twitter.com"><img src="img/icons/twitter.svg"></a></div>
+			<div class="col-md-4"><a href="http://www.instagram.com"><img src="img/icons/instagram.svg"></a></div>
+			<div class="col-md-4"><a href="http://www.medium.com"><img src="img/icons/medium.svg"></a></div>
 		</div>
 	</div>
 	<div id="footer">
@@ -90,7 +90,7 @@
 			<a href=#contact>Contact</a>
 		</div>
 		<div id="copyright">
-			<span>© Spike Spiegel</span>
+			<span>&copy; Spike Spiegel</span>
 		</div>
 	</div>	
 </body>
