--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,12 +2,30 @@
 <html>
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="styles/main.css">
+	<link rel="stylesheet" type="text/css" href="styles/main.css">	
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:100,700">
 	<title>My Portfolio</title>
+	<script src="scripts/app.js"></script>
+	<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256=cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"/></script>
 </head>
 <body>
+	<div class="sidebar-wrapper">
+		<div id="close-btn">
+		<img src="img/icons/x.svg"/>
+		</div>
+		<h2>Spike</h2>
+		<h2>Spiegel</h2>
+		<div class="sidebar-links">
+			<a href=#about>About</a>
+			<a href=#gallery>Gallery</a>
+			<a href=#contact>Contact</a>
+		</div>
+	</div>
+	
 	<div id="intro" class="container-fluid hero landscape">
+		<div id="hamburger">
+			<img src="img/icons/menu.svg"/>
+		</div>
 		<h1>Spike Spiegel</h1>
 		<h5>Freelance Photographer</h5>
 		<a href="#gallery"><button type="button" class="cta">See More</button></a>
@@ -23,7 +41,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid hero gallery">
+	<div id="gallery" class="container-fluid hero">
 		<h2>Gallery</h2>
 		<div class="container">
 			<div class="row">
